--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,22 @@
+[flake8]
+ignore =
+    E203 # whitespace before ':'
+    E731 # do not assign a lambda expression, use a def
+    W503 # line break before binary operator
+    E741 # ambiguous variable name
+    F403 # unable to detect undefined names
+    F405 # may be undefined, or defined from star imports
+    F401 # imported but unused
+max-line-length = 79
+
+[isort]
+line_length = 79
+multi_line_output = 3
+include_trailing_comma = true
+
 [tool:pytest]
-python_files = tests*.py
+python_files = tests*.py *.py
 addopts = --pdbcls=IPython.terminal.debugger:Pdb
+
+[mypy]
+ignore_missing_imports = true
